styles for footer added

--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
                     <option value="recode">Recode</option>
                     <option value="techradar">Tech radar</option>
                 </select>
-                <button class="find-news-button">Get news</button>
+                <button class="find-news-button">Show news</button>
             </section>
             <section class="news-block"></section>
         </main>
-        <footer class="footer">News are received via <a href="https://newsapi.org" target="_blank">newsapi.org</a></footer>
+        <footer class="footer">
+            <p>Created by Maryna Kavetskaya <a href="https://github.com/shparkivozhyk" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a></p>
+            <p>News are received via <a href="https://newsapi.org" target="_blank">newsapi.org</a></p>
+        </footer>
     </div>
     <script src="scripts/components/Article.js"></script>
     <script src="scripts/components/NewsBlock.js"></script>
