article class was changed and some minor changes were added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <option value="recode">Recode</option>
                     <option value="techradar">Tech radar</option>
                 </select>
-                <button class="find-news-button">Show news</button>
+                <button id="find-news-button">Show news</button>
             </section>
             <section class="news-block"></section>
         </main>
@@ -30,6 +30,7 @@
             <p>News are received via <a href="https://newsapi.org" target="_blank">newsapi.org</a></p>
         </footer>
     </div>
+    <script src="config.js"></script>
     <script src="scripts/components/Article.js"></script>
     <script src="scripts/components/NewsBlock.js"></script>
     <script src="app.js"></script>
