promise polyfill npm package added

--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <link rel="stylesheet" href="styles/styles.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Sansita" rel="stylesheet">
-    <script href="https://cdn.jsdelivr.net/npm/promise-polyfill@6/dist/promise.min.js"></script>
-
 </head>
 <body>
     <div class="wrapper">
@@ -32,6 +30,7 @@
             <p>News are received via <a href="https://newsapi.org" target="_blank">newsapi.org</a></p>
         </footer>
     </div>
+    <script src="node_modules/promise-polyfill/promise.min.js"></script>
     <script src="node_modules/whatwg-fetch/fetch.js"></script>
     <script src="compiled/config.js"></script>
     <script src="compiled/components/Article.js"></script>
