add todos json and clean up code

--- a/angular/public/index.html
+++ b/angular/public/index.html
@@ -5,6 +5,7 @@
     <title>Angular app</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-route.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-resource/1.6.1/angular-resource.js"></script>
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body ng-app='toDoApp'>
@@ -31,9 +32,6 @@
         </form>
     </div> -->
     <ng-view></ng-view>
-    <!-- <script src='./templates/lists.html'></script>
-    <script src='./templates/list.html'></script>
-    <script src='./templates/newTodo.html'></script> -->
     <script src="./index.js"></script>
 </body>
 </html>
