--- a/angular/public/index.html
+++ b/angular/public/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Angular app</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-route.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-resource/1.6.1/angular-resource.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-resource/1.6.1/angular-resource.js"></script> -->
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body ng-app='toDoApp'>
